--- a/app/javascript/styles/modern/vanilla-diff.scss
+++ b/app/javascript/styles/modern/vanilla-diff.scss
@@ -28,33 +28,44 @@ body {
   }
 }
 
-/* Fixes */
 .public-layout {
   .activity-stream {
+    // There's a shadow floating, removing it
     box-shadow: none;
     
     .entry {
+      // Modern sets the background to none, put one back
+      // in case the profile has a background
+      background: $ui-base-color !important;
+      // Also add a separator between posts
       border-bottom: 1px solid lighten($ui-base-color, 8%);
     }
   }
 
+  // Fix the background when hovering too
   .entry:hover,
   .focusable:hover {
-    background-color: $ui-base-color;
+    background-color: lighten($ui-base-color, 2%) !important;
   }
 
+  // Add some backgrounds to elements in case there's a background
+  .contact-widget,
+  .landing-page__information.contact-widget,
   .endorsements-widget {
     background-color: $ui-base-color;
+    border-radius: var(--radius);
   }
 
+  // Same as above, but lighter
   .account__section-headline {
     background: lighten($ui-base-color, 8%);
-    border-radius: var(--radius)!important;
+    border-radius: var(--radius) !important;
   }
 
+  // Same as above for the footer, and add some spaces
   .footer {
     background: $ui-base-color;
-    border-radius: 4px;
+    border-radius: var(--radius);
     overflow: hidden;
     margin-bottom: 60px;
     margin-top: 10px;
@@ -62,6 +73,9 @@ body {
   }
 }
 
+
+/* Fixes */
+// This was used in mastodon.coffee, I like it
 .layout-multiple-columns .column {
   flex-grow: 1;
   max-width: 500px;
